feat: add methods to perform authentication
